<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <string name="project_submission">Project Submission</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_error">Submission not Successful</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="retry">Retry</string>
    <string name="network_error_message">An error has occurred</string>
</resources>