<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/popup_bg"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/cancelBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:contentDescription="@string/cancel"
        app:srcCompat="@drawable/ic__cancel_24"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/errorIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_error_24" />

        <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/are_you_sure"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/yes_shape"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/yes"
        android:textColor="#FF9800"
        android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>